flaskapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flask-deploy
  name: flask-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-deploy
    spec:
      containers:
      - image: rohitraut3366/flask-basic:v3
        name: flask-basic
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flask-deploy
  name: flask-deploy
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-deploy
  type: ClusterIP
status:
  loadBalancer: {}
