flaskapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
     paths:
     - path: /hello
       pathType: Prefix
       backend:
         service:
           name: flask-deploy
           port:
             number: 5000
