grpc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc
  annotations:
    konghq.com/protocol: "grpc,grpcs"
spec:
  ingressClassName: kong
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: grpcbin
           port:
             number: 9001
